# chip-remote

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .standalone  CMakeLists.txt  Doxyfile  LICENCE  Makefile  README  cdce-remote.c  cdce-scm.c  cdce-scm.h  chip-remote-scm.c  chip-remote-scm.h  chip-remote.c  client-library.org  common.h  common.mk  compile  cr-valgrind  crdsl-spec.org  dev-env  manifest.scm  mibes  org-export  proto.c  proto.h  rccep-spec.org  scm-helpers.c  scm-helpers.h  scratch.scm  serial.c  serial.h  single-test  spec.org
cmake/: FindGuile.cmake  uninstall.cmake.in
devsimu/: boardsimu
doc/: Makefile  check-modules.sh  chip-remote.mdwn  client-library.org  rccep-spec.org  template.man
examples/: README  adf4169-default-setup.scm  ads4149-decode-defaults.scm  cdce-decode.scm  cdce-read-all-registers.scm  fhac-tiadc-decode-defaults.scm  fw-tests.scm  hello-firmware.scm  init-port.scm  init-serial.scm  lmk04828-decode-defaults.scm  play-rewrite  read-dw3000-saleae-log.scm  scratch.scm  stdin-plot.py
firmware/: CMakeLists.txt  README  common.cmake  main.c  manifest.py  prj_native_posix_64.conf  prj_nucleo_f767zi.conf  system.yaml
firmware/application/: CMakeLists.txt  Kconfig  bitbang-spi.c  bitbang-spi.h  chip-remote.c  chip-remote.h  common.c  heartbeat.c  init-common.h  init-posix.c  init-uart.c  init-usb-cdc-acm.c  interfaces.h  main.c  native-instrumentation.c  native-instrumentation.h  peripherals.c  peripherals.h  prj.conf  prj_nucleo_f767zi.conf  prj_nucleo_l476rg.conf  registers.c  registers.h  resizable-buffer.c  resizable-buffer.h
firmware/application/boards/: native_posix_64.conf  native_posix_64.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay  nucleo_l476rg.conf  nucleo_l476rg.overlay
firmware/application/ifc/bb/: spi.c
firmware/application/ifc/os/: i2c.c  i2c.h  spi.c  spi.h
firmware/application/ifc/text/: spi.c  spi.h
firmware/libraries/libchip-remote/: CMakeLists.txt  chip-remote.h  command-address.c  command-bye.c  command-capabilities.c  command-features.c  command-focus.c  command-fw-version.c  command-hi.c  command-init.c  command-ports.c  command-set.c  command-transmit.c  command-version.c  commands-private.h  commands.c  commands.h  cr-port.c  cr-port.h  cr-process.c  cr-process.h  cr-protocol.c  cr-utilities.c  cr-utilities.h  parse-string.c  parse-string.h
firmware/libraries/libsx-parser/: CMakeLists.txt  sx-parser.c  sx-parser.h  sx-types.h  sx-utils.c  sx-utils.h
firmware/protocol/: CMakeLists.txt  chip-remote.h  command-bye.c  command-bye.h  command-features.c  command-hi.c  command-hi.h  command-transmit.c  commands-private.h  commands.c  cr-port.h  cr-process.c  cr-process.h  parse-string.c  parse-string.h
firmware/src/: CMakeLists.txt  Kconfig  chip-remote.c  chip-remote.h  heartbeat.c  init-common.h  init-posix.c  init-usb-cdc-acm.c  instrumentation.c  main.c  native-instrumentation.c  native-instrumentation.h  peripherals.c  peripherals.h  prj.conf  registers.c  registers.h  server.c  server.h
firmware/src/boards/: maplemini.conf  maplemini.overlay  native_sim_64.conf  native_sim_64.overlay  nucleo_f302r8.conf  nucleo_f302r8.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay  nucleo_l476rg.conf  nucleo_l476rg.overlay
firmware/src/ifc/bb/: spi.c  spi.h
firmware/src/ifc/text/: spi.c
firmware/tests/: CMakeLists.txt  t-parse-string.c  t-sx-parser.c  t-utilities.c
perl/Test/: ChipRemote.pm
protocol/: chip-remote.proto
remote-fw/: .gitignore  Makefile  Makefile.in  buf-parse.c  buf-parse.h  chip-remote.c  chip-remote.h  config.msp430.h.in  config.sim.h.in  configure  line-maps.h  line.c  line.h  main.c  nucleo-144.ld  par-ex.c  par-ex.h  parameters.c  parameters.h  platform.h.in  port.c  port.h  properties.c  properties.h  proto-utils.c  proto-utils.h  protocol.c  protocol.h  requests.c  requests.h  roles.c  roles.h  spi.c  spi.h  transmit.c  transmit.h  utils.c  utils.h
remote-fw/arch/: cr-msp430.h  msp430.c  sim.c  stdout.h
remote-fw/cr/: buf-parse.c  chip-remote.c  chip-remote.h  line-maps.h  line.c  line.h  nucleo-144.c  nucleo-144.h  parameters.c  port.c  port.h  properties.c  properties.h  proto-utils.c  proto-utils.h  protocol.c  protocol.h  requests.c  roles.c  roles.h  spi.c  transmit.h  utils.c  utils.h
remote-fw/nucleo-144/: board.c  board.h  clock.c  clock.h  cr-interface.c  cr-interface.h  eth.c  eth.h  gpio.c  gpio.h  interrupts.c  interrupts.h  nucleo-144.ld  stm32f7xx_hal_conf.h  usart.c  usart.h  usb-device.c  usb-device.h  usb-tty-description.c  usb-tty-description.h  usb-tty-interface.c  usb-tty-interface.h  usbd_conf.c  usbd_conf.h
scheme/: bitops.scm  chip-remote.scm
scheme/chip-remote/: assemble.scm  bit-decoders.scm  bit-operations.scm  bitops.scm  codecs.scm  combination.scm  commander.scm  compiler.scm  decode.scm  device.scm  frontend.scm  interact.scm  interpreter.scm  io.scm  item.scm  keyword-assoc.scm  language.scm  level-3.scm  manufacturer.scm  modify.scm  named-value.scm  old-decode.scm  page-map.scm  pretty-print.scm  process-plist.scm  property.scm  protocol.scm  register-map.scm  register-window.scm  register.scm  semantics.scm  simplify.scm  type-operations.scm  units.scm  utilities.scm  validate.scm
scheme/data-structures/: loadable-fifo.scm  records.scm  sized-stack.scm  variable-width-integer.scm
scheme/documentation/: combine-markdown.scm  module.scm  more.scm  render-markdown.scm
scheme/protocol/: coap.scm  csv.scm  length-prefix.scm  net-unicode.scm  saleae-spi.scm  slip.scm  ufw-regp.scm
scheme/test/: chip-remote.scm  setup.scm  validate-device.scm
scheme/ti/: cdce72010-decode.scm  cdce72010-messages.scm  cdce72010-prg.scm  cdce72010-tables.scm  cdce72010-validate.scm  cdce72010.scm
scripts/: generate-second-level  generate-third-level
simulator/: boardsimu
tests/: CMakeLists.txt  perl.env  scheme.env  shell-cfg.sh  tap.sh  test-tap-cfg.scm
tests/sim/: README  (+8 more)
tools/: dev-env  docc  dwx000-register-refactor.scm  guile-in-here  install  make-standalone  make-standalone.scm  preinst  single-test  standalone-github.scm
(+214 files in other folders)
